Aggiunto opzioni di compilazione per trasformare l'errore di implict-function-declaration in warning. Creato dall'AI il documento di analisi della gestione della grafica.

--- a/flagon/makefile
+++ b/flagon/makefile
@@ -6,8 +6,8 @@ NAME = flagon
 DESCRIPTION = "Ag C Agon flappy bird"
 COMPRESSED = NO
 
-CFLAGS = -Wall -Wextra -Oz
-CXXFLAGS = -Wall -Wextra -Oz
+CFLAGS = -Wall -Wextra -Oz -Wimplicit-function-declaration
+CXXFLAGS = -Wall -Wextra -Oz -Wimplicit-function-declaration
 
 # ----------------------------
 
